--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-eslint": "^7.1.1",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
+    "browserify": "^14.0.0",
     "eslint": "^3.11.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
@@ -40,6 +41,8 @@
     "gulp-uglify": "^2.0.0",
     "jest": "^18.1.0",
     "jest-cli": "^18.1.0",
+    "rollup": "^0.41.4",
+    "rollup-plugin-uglify": "^1.0.1",
     "streamify": "^0.2.6",
     "var": "^0.2.0",
     "vinyl-source-stream": "^1.1.0"
