--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-eslint": "^7.1.1",
-    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-es2015-rollup": "^3.0.0",
     "babel-preset-stage-0": "^6.16.0",
     "eslint": "^3.11.1",
     "gulp": "^3.9.1",
@@ -40,6 +40,7 @@
     "jest": "^18.1.0",
     "jest-cli": "^18.1.0",
     "rollup": "^0.41.4",
+    "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-uglify": "^1.0.1"
   }
 }
